GitVersion1/objects/Rebate_Request_Line__c.object
<CustomObject>
    <fields>
        <fullName>Apply_logistic_discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Wypełnienie pola &quot;Upust %&quot; blokuje z automatu pozostałe pola. W przypadku rabatu procent. zawsze zaznaczy się pole „Zastosuj upust logistyczny”. Pole to dotyczy dystrybutorów, gdzie rabat logistyczny nalicza się zawsze gdy spełnione są warunki tonażowe.</inlineHelpText>
        <label>Apply logistic discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_permanent_discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>W przypadku rabatów dodatkowych konieczne jest również zaznaczenie pola „Dodatkowo zastosuj standardowe rabaty”. Dotyczy to zwłaszcza dystrybucji gdzie oprócz rabatów dodatkowych są stosowane rabaty wynikające z umowy.</inlineHelpText>
        <label>Apply permanent discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAR_Amount_in_Currency__c</fullName>
        <label>Amount in Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAR_Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAR_Current_Discount__c</fullName>
        <label>Current Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAR_Discount_Percentage_1__c</fullName>
        <label>Discount Percentage 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CAR_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line Level</fullName>
                    <default>true</default>
                    <label>Line Level</label>
                </value>
                <value>
                    <fullName>Customer Level</fullName>
                </value>
                <value>
                    <fullName>Total Value Based</fullName>
                </value>
                <value>
                    <fullName>Total Volume Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAR_Find_Next_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Find Next Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAR_Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship To</fullName>
                    <default>true</default>
                    <label>Ship To</label>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAR_Payment_Terms__c</fullName>
        <label>Only For Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>DATA</fullName>
                </value>
                <value>
                    <fullName>PF03</fullName>
                </value>
                <value>
                    <fullName>PF05</fullName>
                </value>
                <value>
                    <fullName>PF07</fullName>
                </value>
                <value>
                    <fullName>PF10</fullName>
                </value>
                <value>
                    <fullName>PF120</fullName>
                </value>
                <value>
                    <fullName>PF130</fullName>
                </value>
                <value>
                    <fullName>PF14</fullName>
                </value>
                <value>
                    <fullName>PF21</fullName>
                </value>
                <value>
                    <fullName>PF28</fullName>
                </value>
                <value>
                    <fullName>PF30</fullName>
                </value>
                <value>
                    <fullName>PF35</fullName>
                </value>
                <value>
                    <fullName>PF40</fullName>
                </value>
                <value>
                    <fullName>PF42</fullName>
                </value>
                <value>
                    <fullName>PF45</fullName>
                </value>
                <value>
                    <fullName>PF50</fullName>
                </value>
                <value>
                    <fullName>PF55</fullName>
                </value>
                <value>
                    <fullName>PF60</fullName>
                </value>
                <value>
                    <fullName>PF70</fullName>
                </value>
                <value>
                    <fullName>PF75</fullName>
                </value>
                <value>
                    <fullName>PF80</fullName>
                </value>
                <value>
                    <fullName>PF90</fullName>
                </value>
                <value>
                    <fullName>RZBRO</fullName>
                </value>
                <value>
                    <fullName>RZGĘŚ</fullName>
                </value>
                <value>
                    <fullName>RZIND</fullName>
                </value>
                <value>
                    <fullName>RZKACZKA</fullName>
                </value>
                <value>
                    <fullName>RZNIO</fullName>
                </value>
                <value>
                    <fullName>RZTRZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAR_Product_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Code</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Rebate Request Lines</relationshipLabel>
        <relationshipName>Rebate_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAR_Rebate_Request__c</fullName>
        <label>Rebate Request</label>
        <referenceTo>CAR_RebateReqs__c</referenceTo>
        <relationshipLabel>Rebate Request Lines</relationshipLabel>
        <relationshipName>Rebate_Request_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CAR_Valid_From__c</fullName>
        <defaultValue>Today()+1</defaultValue>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAR_Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <inlineHelpText>Wypełnienie pola &quot;Upust %&quot; blokuje z automatu pozostałe pola. W przypadku rabatu procent. zawsze zaznaczy się pole „Zastosuj upust logistyczny”. Pole to dotyczy dystrybutorów, gdzie rabat logistyczny nalicza się zawsze gdy spełnione są warunki tonażowe.</inlineHelpText>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packaging__c</fullName>
        <label>Only For Packaging</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_price__c</fullName>
        <label>Special price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_form__c</fullName>
        <label>Only For Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rebate Request Line</label>
    <nameField>
        <displayFormat>RRL-{00000}</displayFormat>
        <label>Rebate Request Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ApplyLogisticDiscountMarkRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL( Discount_Percentage__c )), Apply_logistic_discounts__c  = false)</errorConditionFormula>
        <errorDisplayField>Apply_logistic_discounts__c</errorDisplayField>
        <errorMessage>Should be marked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckDiscountsAndValue</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(NOT(ISNULL(Discount_Percentage__c)), 
	OR(NOT(ISNULL(Special_price__c)),
		NOT(ISNULL(Discount_Value__c)))),
		
		
	AND(NOT(ISNULL(Special_price__c)), 
		OR(NOT(ISNULL(Discount_Percentage__c )),
			NOT(ISNULL(Discount_Value__c)))),
		
	AND(NOT(ISNULL(Discount_Value__c )), 
		OR(NOT(ISNULL(Discount_Percentage__c )),
			NOT(ISNULL(Special_price__c))))
			
)</errorConditionFormula>
        <errorMessage>Only one field can be populated for fields Discount %, Discount value and Special price</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Product_and_discount_price</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISBLANK(Product__c),
	AND(ISBLANK( Discount_Percentage__c), 
		ISBLANK(Discount_Value__c),  
		ISBLANK(Special_price__c)
	)
)</errorConditionFormula>
        <errorMessage>You must enter a Product and either a Discount %, Value or Special price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rebate_Line_Lock_Check</fullName>
        <active>true</active>
        <errorConditionFormula>CAR_Rebate_Request__r.Locked__c</errorConditionFormula>
        <errorMessage>Rebate Request Record is Locked. Rebate Lines cannot be created or edited.</errorMessage>
    </validationRules>
</CustomObject>